; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_execExprInterp.c_ExecInterpExprStillValid.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_execExprInterp.c_ExecInterpExprStillValid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { {}*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ExecInterpExprStillValid(%struct.TYPE_6__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @CheckExprStillValid(%struct.TYPE_6__* %7, i32* %8)
  %10 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i32 (%struct.TYPE_6__*, i32*, i32*)*
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = bitcast {}** %15 to i32 (%struct.TYPE_6__*, i32*, i32*)**
  store i32 (%struct.TYPE_6__*, i32*, i32*)* %13, i32 (%struct.TYPE_6__*, i32*, i32*)** %16, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = bitcast {}** %18 to i32 (%struct.TYPE_6__*, i32*, i32*)**
  %20 = load i32 (%struct.TYPE_6__*, i32*, i32*)*, i32 (%struct.TYPE_6__*, i32*, i32*)** %19, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %22 = load i32*, i32** %5, align 8
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 %20(%struct.TYPE_6__* %21, i32* %22, i32* %23)
  ret i32 %24
}

declare dso_local i32 @CheckExprStillValid(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
